k8s/k8s-deploy-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
spec:
  selector:
    matchLabels:
      app: database
  replicas: 1
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
        - name: database
          image: postgres:9.5
          ports:
            - containerPort: 5432
---
kind: Service
apiVersion: v1
metadata:
  name: database
spec:
  selector:
    app: database
  ports:
    - port: 5432
      targetPort: 5432
